# llm-steering

./: .env.example  .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  styles.css
apps/web/src/lib/: api.ts  diff.tsx  markdown.tsx  presets.ts  types.ts
configs/prompt_pairs/: customer_support_empathy.yaml  honesty.yaml  release_risk_calibration.yaml  sentiment.yaml  sentiment_rich.yaml  starter_prompt_pair_example.yaml  tutor_encouragement.yaml
docs/: codex_handoff_prompt.md  e2e_expert_review.md  methodology.md  workbench_spec.md
docs/showcase/: README.md  ollama_vs_hf_baseline.json  pre_post_showcase.json  use_case_showcase.json
docs/tapes/: README.md
research/: 2026-06-14_diffusiongemma_qwen_ui_research_notes.md  README.md  gemma4_runtime_notes.md  steering_vectors_literature_review.md  verified_sources.json
scripts/: build_readme_media.py  build_showcase.py  compare_baselines.py  download_hf_gemma4.py  run_actadd.py  serve_api.py  verify_gpu.py
src/llm_steering/: __init__.py  api.py  config.py  docs_index.py  experiments.py  hf_runtime.py  introspection.py  metrics.py  model_registry.py  ollama_client.py  steering.py
tests/: test_api.py  test_config.py  test_introspection.py  test_metrics.py  test_model_registry.py  test_steering.py
